# AID-SDK-Python

./: .gitignore  .redeploy  .trigger_redeploy  aid_client_sdk-1.0.0-py3-none-any.whl  cli_start.bat  cli_start.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
aid-client-sdk-python-1.0.0/: requirements.txt  setup.py
aid-client-sdk-python-1.0.0/config/: config.yml
aid-client-sdk-python-1.0.0/docs/: installation_guide.md
aid-client-sdk-python-1.0.0/examples/: basic_usage.py  cli_start.bat  cli_start.sh
aid-client-sdk-python-1.0.0/src/aid_sdk/auth/: auth_decorator.py  auth_manager.py
aid-client-sdk-python-1.0.0/src/aid_sdk/cli/: __init__.py  base.py  cmd_delete_task.py  cmd_fetch_task_result.py  cmd_new_task_create.py
aid-client-sdk-python-1.0.0/tests/integration/: test_workflow_integration.py
aid-client-sdk-python-1.0.0/tests/unit/: test_config_manager.py
config/: config.yml
docs/: installation_guide.md
examples/: _merge_files_args.py  cli_start.bat  cli_start.sh  config.yml
src/aid_sdk/: __init__.py  client.py
src/aid_sdk/auth/: __init__.py  auth_service.py
src/aid_sdk/cli/: cmd_help.py  cmd_new_task_verify.py  cmd_query_task_status.py  cmd_start_task.py  cmd_stop_task.py  cmd_upload_paramfiles.py  main.py
src/aid_sdk/common/: exceptions.py  response.py
src/aid_sdk/config/: __init__.py  config_manager.py  config_validator.py
src/aid_sdk/http/: http_client.py
src/aid_sdk/task/: __init__.py  models.py  task_service.py
tests/unit/: test_auth_manager.py  test_task_service.py
(+7 files in other folders)
